<resources>
    <string name="app_name">DBBLLocationApp</string>
    <string name="dbbl_location_api_url">http://tousifosman.duckdns.org:8080/DBBLLocationServer</string>
    <!--<string name="dbbl_location_api_url">http://10.0.2.2/DBBLLocationServer</string>-->
    <string name="dbbl_location_api_url_location">Locations</string>
    <string name="dbbl_location_api_url_zone">Zones</string>
    <string name="title_activity_maps">DBBL Map</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- App Layout Strings -->
    <string name="branch_name_label">Branch Name</string>
    <string name="branch_name">Dummy Branch Name</string>
    <string name="branch_address_label">Address</string>
    <string name="branch_address">Dummy Address</string>
    <string name="branch_distance_label">Distance</string>
    <string name="branch_distance">0.0 km</string>

    <!--Near by activity-->
    <string name="av_nearby_label">Nearby Branches</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_navigation_drawer">TestNavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
