<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:auto="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="16dp"
        auto:layout_constraintBottom_toBottomOf="parent"
        auto:layout_constraintEnd_toEndOf="parent"
        auto:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNotifBNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/branch_name_label"
            auto:layout_constraintStart_toStartOf="parent"
            auto:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNotifBName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/branch_name"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintHorizontal_bias="0.0"
            auto:layout_constraintStart_toEndOf="@+id/tvNotifBNameTitle"
            auto:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNotifBAddrTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/branch_address_label"
            auto:layout_constraintEnd_toEndOf="@+id/tvNotifBNameTitle"
            auto:layout_constraintTop_toBottomOf="@+id/tvNotifBName" />

        <TextView
            android:id="@+id/tvNotifBAddr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/branch_address"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            auto:layout_constraintEnd_toEndOf="parent"
            auto:layout_constraintHorizontal_bias="0.0"
            auto:layout_constraintStart_toEndOf="@+id/tvNotifBAddrTitle"
            auto:layout_constraintTop_toTopOf="@+id/tvNotifBAddrTitle" />

    </android.support.constraint.ConstraintLayout>