<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <android.support.constraint.ConstraintLayout
        android:id="@+id/mapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cameraZoom="15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="com.dbbl.tousifosman.dbbllocationapp.MapsActivity" />


        <LinearLayout
            android:id="@+id/lySearchContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/r_bg_white"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnDrawer"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="0"
                    android:background="@drawable/ic_side_nav"
                    android:backgroundTint="@color/common_google_signin_btn_text_light_default" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lySVContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1">

                <SearchView
                    android:id="@+id/svLocations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/common_google_signin_btn_text_light_default"
                    android:gravity="center_vertical|start"
                    android:queryBackground="@android:color/white"
                    android:queryHint="Search Branch"
                    android:searchIcon="@drawable/ic_search" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spZones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_weight="0"
                android:gravity="end" />

        </LinearLayout>

        <ListView
            android:id="@+id/lvSearchResult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:defaultFocusHighlightEnabled="false"
            android:elevation="3dp"
            android:fillViewport="false"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lySearchContainer"
            app:layout_constraintVertical_bias="0.0"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFocusUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:elevation="2dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lySearchContainer"
            app:srcCompat="@android:drawable/ic_menu_mylocation" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFocusNearestBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:elevation="2dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toStartOf="@+id/fabFocusUser"
            app:layout_constraintTop_toTopOf="@+id/fabFocusUser"
            app:srcCompat="@android:drawable/ic_menu_directions" />

        <FrameLayout
            android:id="@+id/flMapNotificationContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bottom_slide_bg_white"
            android:elevation="3dp"
            android:paddingBottom="24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <fragment
                android:id="@+id/fgMapNotification"
                android:name="com.dbbl.tousifosman.dbbllocationapp.NotificationFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/map"
                app:layout_constraintEnd_toEndOf="@+id/map"
                app:layout_constraintStart_toStartOf="@+id/map"
                tools:layout="@layout/fragment_notification" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/lyMapNotification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bottom_slide_bg_white"
            android:elevation="3dp"
            android:gravity="top|right"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tvNotifBNameTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/branch_name_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNotifBName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/branch_name"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvNotifBNameTitle"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNotifBAddrTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/branch_address_label"
                    app:layout_constraintEnd_toEndOf="@+id/tvNotifBNameTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvNotifBName" />

                <TextView
                    android:id="@+id/tvNotifBAddr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/branch_address"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvNotifBAddrTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvNotifBAddrTitle" />

                <TextView
                    android:id="@+id/tvNotifBDistanceTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/branch_distance_label"
                    app:layout_constraintEnd_toEndOf="@+id/tvNotifBAddrTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvNotifBAddr" />

                <TextView
                    android:id="@+id/tvNotifBDistance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/branch_distance"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvNotifBDistanceTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvNotifBDistanceTitle" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btnNotifBClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0"
                android:background="@drawable/ic_close"
                android:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:headerLayout="@layout/nav_header_test_navigation_drawer"
        app:menu="@menu/activity_test_navigation_drawer_drawer" />

</android.support.v4.widget.DrawerLayout>